fix(security,user): implement UserDetailsService, fix DTO mapping and align authentication flow